test/scc_test/decl/semantic-errors/019.a
019.t:3:5: error: invalid storage class for 'foo'